[tool.poetry]
name = "volprofile"
version = "0.1.4"
description = "calculate the volume profile in a flexible manner!"
authors = ["maghrebi <sajad.faghfoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
