[tool.poetry]
name = "volprofile"
version = "1.0.0"
description = "calculate the volume profile in a flexible manner!"
authors = ["maghrebi <sajad.faghfoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4"
pandas = "^1.5.1"
numpy = "^1.23.4"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
